# hidapi_rs

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: hidapi_rs.ex
lib/hidapi/: device_info.ex  native.ex
native/hidapi/: Cargo.toml  README.md
native/hidapi/src/: lib.rs
test/: hidapi_rs_test.exs
