[package]
name = "hidapi"
version = "0.1.0"
authors = []

[lib]
name = "hidapi"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
rustler_codegen = { git = "https://github.com/hansihe/rustler", branch = "remove_nif_from_types"}
lazy_static = "1.0.0"
